[gd_scene load_steps=3 format=3 uid="uid://b0mfhrhb0a11v"]

[ext_resource type="Texture2D" uid="uid://d3fww2io34ylw" path="res://button_2.png" id="2_eccl0"]
[ext_resource type="Script" path="res://scripts/drag_button.gd" id="2_r846v"]

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(0.285156, 0.285156)
texture = ExtResource("2_eccl0")
script = ExtResource("2_r846v")

[node name="Button" type="Button" parent="Sprite2D"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -256.0
offset_right = -256.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1

[connection signal="button_down" from="Sprite2D/Button" to="Sprite2D" method="_on_button_button_down"]
[connection signal="button_up" from="Sprite2D/Button" to="Sprite2D" method="_on_button_button_up"]
[connection signal="pressed" from="Sprite2D/Button" to="Sprite2D" method="_on_button_pressed"]
